<?xml version="1.0" encoding="utf-8"?><!--
  ~     Pupil, Hitomi.la viewer for Android
  ~     Copyright (C) 2020  tom5079
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <xyz.quaver.pupil.ui.view.MainView
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.qtalk.recyclerviewfastscroller.RecyclerViewFastScroller
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:addLastItemPadding="true"
            app:handleDrawable="@drawable/thumb"
            app:handleHasFixedSize="true"
            app:handleHeight="72dp"
            app:handleVisibilityDuration="1000"
            app:handleWidth="24dp"
            app:popupDrawable="@android:color/transparent"
            app:trackMarginStart="64dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingTop="64dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </com.qtalk.recyclerviewfastscroller.RecyclerViewFastScroller>

    </xyz.quaver.pupil.ui.view.MainView>

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true" />

    <TextView
        android:id="@+id/noresult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:linksClickable="true"
        android:text="@string/main_no_result"
        android:visibility="invisible" />

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        app:menu_colorNormal="@color/colorAccent">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/cancel_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_label="@string/main_fab_cancel"
            app:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/jump_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_label="@string/main_jump_title"
            app:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/random_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_label="@string/main_fab_random"
            app:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/id_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_label="@string/main_open_gallery_by_id"
            app:fab_size="mini" />

    </com.github.clans.fab.FloatingActionMenu>

    <xyz.quaver.pupil.ui.view.FloatingSearchView
        android:id="@+id/searchview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:close_search_on_keyboard_dismiss="false"
        app:dismissOnOutsideTouch="true"
        app:leftActionMode="showHamburger"
        app:menu="@menu/main"
        app:searchBarMarginLeft="6dp"
        app:searchBarMarginRight="6dp"
        app:searchBarMarginTop="6dp"
        app:searchHint="@string/search_hint"
        app:showSearchKey="true"
        app:suggestionAnimDuration="250" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>