<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp">

    <TextView
        android:id="@+id/default_query_dialog_title"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_query_dialog_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        tools:ignore="Autofill"
        android:inputType="text"
        android:hint="@string/settings_default_query"
        android:id="@+id/default_query_dialog_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/default_query_dialog_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/default_query_dialog_language_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/default_query_dialog_edittext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_query_dialog_language"/>

        <Spinner
            android:id="@+id/default_query_dialog_language_selector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/default_query_dialog_BL_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="0dp"
        android:paddingStart="0dp"
        android:paddingEnd="8dp"
        android:paddingRight="8dp"
        app:layout_constraintTop_toBottomOf="@id/default_query_dialog_language_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/default_query_dialog_filter_BL"/>

        <CheckBox
            android:id="@+id/default_query_dialog_BL_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/default_query_dialog_guro_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="0dp"
        android:paddingStart="0dp"
        android:paddingEnd="8dp"
        android:paddingRight="8dp"
        app:layout_constraintTop_toBottomOf="@id/default_query_dialog_BL_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/default_query_dialog_filter_guro"/>

        <CheckBox
            android:id="@+id/default_query_dialog_guro_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/default_query_dialog_ok"
        style="?borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/default_query_dialog_guro_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@android:string/ok"/>

</androidx.constraintlayout.widget.ConstraintLayout>